i change web page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -74,8 +74,8 @@
       leavening agent like baking powder or baking soda. Cakes can be simple or elaborate, and are often decorated and
       served for special occasions like birthdays or weddings</p>
   </div><br>
-  <button (click)="cart()">Add Cart</button>
+  <button (click)="cart()" style="border-radius: 7px;">Add Cart</button>
   <div><br>
-    <button (click)="buy()">Buy</button>
+    <button (click)="buy()" style="border-radius: 7px;">Buy</button>
   </div>
 </div>
