--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -53,7 +53,7 @@
 
        
 <br>
-        <button type="submit" class="btn btn-primary" (click)="onSubmit(loginForm)" [disabled]="loginForm.invalid">
+        <button type="submit" (click)="onSubmit(loginForm)" [disabled]="loginForm.invalid">
             Submit
         </button>
     </form>
